@@ -1,5 +1,7 @@
 package br.com.js.mailsender.domain.model;
 
+import java.util.Locale;
+
 public class AttachmentTooLargeException extends RuntimeException {
 
     public AttachmentTooLargeException(long totalBytes, long limitBytes) {
@@ -9,7 +11,8 @@ public class AttachmentTooLargeException extends RuntimeException {
                 .formatted(mb(totalBytes), mb(limitBytes)));
     }
 
+    /** Locale.ROOT de proposito: mensagem de resposta HTTP nao pode variar com o host. */
     private static String mb(long bytes) {
-        return "%.1f MB".formatted(bytes / (1024.0 * 1024.0));
+        return String.format(Locale.ROOT, "%.1f MB", bytes / (1024.0 * 1024.0));
     }
 }
